--- a/Calc.html
+++ b/Calc.html
@@ -11,6 +11,12 @@
     <table>
       <tr>
         <td id="numabs"><button type="button" name="button" onclick="pabs()">|</button></td>
+        <td id="numclear"><button type="button" name="button" onclick="pback()"><</button></td>
+        <td id="numroot"><button type="button" name="button" onclick="proot()">√</button></td>
+        <td id="numgo"><button type="button" name="button" onclick="pgo()">=</button></td>
+      </tr>
+      <tr>
+        <td id="numabs"><button type="button" name="button" onclick="pabs()">|</button></td>
         <td id="numclear"><button type="button" name="button" onclick="pclear()">.</button></td>
         <td id="numroot"><button type="button" name="button" onclick="proot()">√</button></td>
         <td id="numgo"><button type="button" name="button" onclick="pgo()">=</button></td>
