--- a/Calc.html
+++ b/Calc.html
@@ -7,8 +7,9 @@
   </head>
   <body>
     <script src="calc.js" charset="utf-8"></script>
-    <p id="display"></p>
-    <table>
+    <div id="display">
+    </div>
+    <table class="buttons">
       <tr>
         <td id="numabs"><button type="button" name="button" onclick="pabs()">|</button></td>
         <td id="numclear"><button type="button" name="button" onclick="pback()"><</button></td>
@@ -16,10 +17,10 @@
         <td id="numgo"><button type="button" name="button" onclick="pgo()">=</button></td>
       </tr>
       <tr>
-        <td id="numabs"><button type="button" name="button" onclick="pabs()">|</button></td>
         <td id="numclear"><button type="button" name="button" onclick="pclear()">.</button></td>
+        <td id="numex"><button type="button" name="button" onclick="pex()">^</button></td>
         <td id="numroot"><button type="button" name="button" onclick="proot()">√</button></td>
-        <td id="numgo"><button type="button" name="button" onclick="pgo()">=</button></td>
+        <td id="numsub"><button type="button" name="button" onclick="psub()">-</button></td>
       </tr>
       <tr>
         <td id="num7"><button type="button" name="button" onclick="p7()">7</button></td>
@@ -31,7 +32,7 @@
         <td id="num4"><button type="button" name="button" onclick="p4()">4</button></td>
         <td id="num5"><button type="button" name="button" onclick="p5()">5</button></td>
         <td id="num6"><button type="button" name="button" onclick="p6()">6</button></td>
-        <td id="numsub"><button type="button" name="button" onclick="psub()">-</button></td>
+        <td id="nummul"><button type="button" name="button" onclick="pmul()">*</button></td>
       </tr>
       <tr>
         <td id="num1"><button type="button" name="button" onclick="p1()">1</button></td>
@@ -39,12 +40,12 @@
         <td id="num3"><button type="button" name="button" onclick="p3()">3</button></td>
         <td id="numdiv"><button type="button" name="button" onclick="pdiv()">\</button></td>
       </tr>
-      <tr>
+    <!--  <tr>
         <td id="nument"><button type="button" name="button" onclick="pent()">(</button></td>
         <td id="numexit"><button type="button" name="button" onclick="pexit()">)</button></td>
         <td id="numex"><button type="button" name="button" onclick="pex()">^</button></td>
         <td id="nummul"><button type="button" name="button" onclick="pmul()">*</button></td>
-      </tr>
+      </tr> -->
     </table>
   </body>
 </html>
